--- a/style.css
+++ b/style.css
@@ -199,8 +199,8 @@ p{
     cursor: pointer;
     background-color: rgb(212, 212, 212);
 }
-.btn-bookmark img{
-    padding-left: 0.5rem;
+.btn-bookmark.checked{
+    background: url(./images/icon-check.svg) no-repeat center center/contain;
 }
 
 /* FIRST CONTAINER */
@@ -239,9 +239,10 @@ progress::-webkit-progress-value{
 .about-container{
     text-align: left;
     z-index: 1;
+    margin-bottom: 3rem;
 }
 .about-offer{
-    width: 90%;
+    width: 100%;
     margin: auto;
     border: 1px rgb(212, 212, 212) solid;
     border-radius: 1rem;
@@ -270,6 +271,9 @@ progress::-webkit-progress-value{
 .hide{
     display: none;
 }
+.close-modal{
+    cursor: pointer;
+}
 .bg-modal-wrapper{
     height: 100%;
     width: 100%;
@@ -283,6 +287,7 @@ progress::-webkit-progress-value{
     display: none;
 }
 .modal-container{
+    max-width: 50rem;
     margin: 5rem auto;
     background-color: white;
     width: 90%;
@@ -299,22 +304,23 @@ progress::-webkit-progress-value{
     margin: 0;
 }
 /* PLADGE */
-.pladge-container{
+.pledge-container{
     width: 100%;
     border-top: 2px rgb(212, 212, 212) solid;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    display: none;
 }
-.pladge-button{
+.pledge-button{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
-.pladge-button input{
+.pledge-button input{
     width: 7rem;
     border-radius: 2rem;
     padding: 1rem 2rem;
@@ -334,11 +340,17 @@ progress::-webkit-progress-value{
     top: 1rem;
     left: 1rem;
 }
+.selected-pledge{
+    border: 2px hsl(176, 50%, 47%) solid;
+}
+.selected-pledge .pledge-container{
+    display: block;
+}
 @media (max-width: 390px){
-    .pladge-button{
+    .pledge-button{
         justify-content: center;
     }
-    .pladge-button input{
+    .pledge-button input{
         margin-bottom: 1rem;
     }
 }
@@ -401,16 +413,30 @@ progress::-webkit-progress-value{
         border-radius: 2rem;
         padding: 1rem 6rem;
     }
+    .btn-bookmark.checked{
+        background-position: left center;
+        background-color: rgb(212, 212, 212);
+    }
     .btn-bookmark::after{
         content: 'Bookmark';
         position: absolute;
         top: 50%;
         left: 62%;
         transform: translate(-50%, -50%);
-        color: hsl(0, 0%, 48%);
+        color: hsl(0, 0%, 27%);
         padding: 1rem 5rem;
         font-weight: 700;
         font-size: 1rem;
+    }
+    .btn-bookmark:hover::after{
+        color: hsl(0, 0%, 65%)
+    }
+    .btn-bookmark.checked::after{
+        content: 'Bookmarked';
+        color: hsl(176, 50%, 47%);
+    }
+    .btn-bookmark.checked:hover::after{
+        color: hsl(176, 50%, 66%);
     }
 
     /* PROGRESS CONTAINER */
@@ -431,36 +457,133 @@ progress::-webkit-progress-value{
     }
 
     /* ABOUT CONTAINER */
-    .about-offer{
+    .about-offer-desktop{
         padding: 1rem 2rem;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template: repeat(3,1fr) / repeat(2, 1fr);
+        grid-template: repeat(3,0.5fr) / repeat(2, 1fr);
         grid-template-areas:
         "title price"
         "pharagraph pharagraph"
         "number button";
     }
-    .about-offer h3{
+    .about-offer-desktop h3{
         grid-area: title;
     }
-    .price{
+    .about-offer-desktop .price{
         margin-top: 17.6px;
         grid-area: price;
         justify-self: end;
     }
-    .about-offer p{
+    .about-offer-desktop p{
         grid-area: pharagraph;
     }
-    p.number-left{
+    .about-offer-desktop p.number-left{
         padding: 0;
         display:flex;
         grid-area: number;
         align-items: center;
     }
-    .about-offer button{
+    .about-offer-desktop button{
         grid-area: button;
         align-self: center;
         justify-self: end;
+    }
+
+    /*  ===============
+    MODAL SELECTION
+    ===============*/
+
+    .modal-container{
+        padding: 2rem;
+    }
+    .modal-container p{
+        margin-top: 0;
+    }
+    .heading-icon{
+        padding: 0;
+        height: 4rem;
+    }
+    .heading-icon img{
+        align-self: flex-start;
+    }
+
+    /* PLADGE */
+    .modal-container .about-offer{
+        display: flex;
+        flex-direction: column;
+    }
+    .modal-choice-offer{
+        display: grid;
+        grid-template: 0.5fr 1fr/ 0.4fr 0.9fr 1fr 1fr;
+        grid-template-areas:
+        "radio title price number"
+        "radio pharagraph pharagraph pharagraph";
+        align-items: center;
+    }
+    .modal-choice-offer h3{
+        grid-area: title;
+        justify-self: center;
+    }
+    .modal-choice-offer .price{
+        grid-area: price;
+    }
+    .modal-choice-offer p{
+        grid-area: pharagraph;
+    }
+    .modal-choice-offer p.number-left{
+        grid-area: number;
+        padding: 0;
+        margin: 0;
+        justify-self: end;
+    }
+    .modal-choice-offer input{
+        -webkit-appearance: none;
+        position: relative;
+        width: 1.8rem;
+        height: 1.8rem;
+        grid-area: radio;
+        align-self: start;
+        margin: 2rem 0 0 1rem;
+        border-radius: 50%;
+        outline: none;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        position: relative;
+    }
+    
+    .modal-choice-offer input[type="radio"]:hover {
+        border: 2px solid hsl(176, 50%, 47%);
+    }
+    
+    .modal-choice-offer input[type="radio"]:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: block;
+        width: 50%;
+        height: 50%;
+        border-radius: 50%;
+    }
+    
+    .modal-choice-offer input[type="radio"]:checked:before {
+        background: hsl(176, 50%, 47%);
+    }
+    .modal-choice-offer label:hover{
+        color: hsl(176, 50%, 47%);
+    }
+
+    .pledge-container{
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 1rem 0;
+    }
+    .pledge-container p{
+        padding: 0;
+        margin: auto 0;
+    }
+    .pledge-button{
+        width: auto;
+        gap: 1rem;
     }
 }
